2003-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uri-rfc2396.test: Added constraint 'knownBug' to these
	  tests. And reference to [#581781].

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* uri.test:
	* uri.tcl (::uri::split): Fixed bug #676976 reported by Jason
	  Mills <jasonmills@users.sourceforge.net>. An incorrect regular
	  expression (typo in character class) accepted more character
	  than it should have.

2003-04-10  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl:
	* uri.man:
	* uri.tcl: Fixed bug #614591. Set version
	  of the package to to 1.1.2.

	* urn-scheme.tcl: Fixed bug #614591. Set version
	  of the package to to 1.0.1

2003-03-28  Andreas Kupries  <andreask@activestate.com>

	* uri.man:
	* uri-rfc2396.test: New file. First step towards conformance with
	  RFC 2396, a testsuite for checking conformant behaviour. Thanks
	  to Rolf Ade <pointsman@users.sourceforge.net>. Bug
	  #581781. Noted non-conformance in documentation, inviting help.

2003-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* uri.test (uri-4.1): Fixed bad test.

2003-02-06  David N. Welton  <davidw@dedasys.com>

	* uri.tcl (uri::SplitMailto): Use 'string match' instead of
	  regexp.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uri.man: More semantic markup, less visual one.

2003-01-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
	
	* pkgIndex.tcl: Bump ifneeded patchlevel to match the provide in
	  uri.tcl. See last change.

2002-11-15  David N. Welton  <davidw@dedasys.com>

	* uri.tcl (uri::canonicalize): Take care of trailing .., as in
	"http://foobar.com/foo/bar/..".

	* uri.test: Test for the above condition.

	* uri.tcl: Bump patchlevel in 'package provide'.

	* uri.test: Added tests for 'news' splitting and joining.

	* uri.man: Added 'news' to list of supported uri's.

	* uri.tcl (uri::SplitNews) (uri::JoinNews): Join and split 'news'
	URI's.  Fixes 636977.
